# ziplocator

./: .gitignore  Cargo.toml  README.md  flake.nix
ziplocator_data/: Cargo.toml
ziplocator_data/src/: lib.rs
ziplocator_nn/: Cargo.toml
ziplocator_nn/src/: data.rs  infer.rs  lib.rs  model.rs  train.rs
ziplocator_ui/: Cargo.toml
ziplocator_ui/src/: debug.rs  iced.rs  lib.rs  map.rs
ziplocator_ui/src/map/: mod.rs  widget.rs  worker.rs
