[workspace]
resolver = "2"
members = [ 
  "ziplocator_data",
  "ziplocator_nn",
  "ziplocator_ui"
]

[workspace.dependencies]
ziplocator_data = { path = "./ziplocator_data/" }
ziplocator_nn = { path = "./ziplocator_nn/" }

burn = { version = "0.16.0", features = ["train", "tui", "metrics", "autodiff", "ndarray"] }
burn-dataset = { version = "*", features = ["dataframe"] }
polars = { version = "*", features = [] }
data_downloader = { version = "0.2.0", features = ["zip"] }
hex-literal = "0.4.1"
serde = { version = "1.0.217", features = ["derive"] }
galileo = { git = "https://github.com/Nxllpointer/galileo.git" }
iced = { git = "https://github.com/iced-rs/iced.git", features = ["image", "lazy", "advanced", "tokio"] }
pollster = "0.4.0"
tokio = "1.43.0"
opener = "0.7.2"
